css/index.css
body {
  text-align: center;
  color: white;
  background-image: url('../img/sparkly-stars.jpg');
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.btn {
  background-color: white;
  color: black;
  font-size: 20px;
  border-radius: 8px;
  font-family: Georgia, 'Times New Roman', Times, serif;
  transition-duration: o.4s;
  border: 1px black;
  width: 250px;
  position: relative;
  top: 100px;
  padding: 14px 40px;
}

.btn:hover {
  background-color: mediumvioletred;
  color: white;
  box-shadow: 5px 10px 18px rgb(158, 13, 105);
}

